--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "manticore-orderbook"
-version = "0.3.0"
-description = "High-performance order book management for trading systems"
+version = "1.0.0"
+description = "A high-performance order book implementation for cryptocurrency exchanges"
 readme = "README.md"
 authors = [
     {name = "Manticore Technologies"}
@@ -15,13 +15,15 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+    "Intended Audience :: Financial and Insurance Industry",
+    "Topic :: Office/Business :: Financial :: Investment",
 ]
 requires-python = ">=3.8"
-dependencies = []
+dependencies = ["tabulate>=0.8.9"]
 
 [project.optional-dependencies]
-benchmark = ["tabulate>=0.9.0"]
-dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "tabulate>=0.9.0"]
+benchmark = ["tabulate>=0.8.9"]
+dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "tabulate>=0.8.9"]
 
 [project.urls]
 "Homepage" = "https://github.com/manticoretechnologies/manticore-orderbook"
