--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,63 @@
-*.pyc
-*.pyo
-*.pyd
-*.pyw
-*.pyz
-*.pywz
-*.pyzw
-__pycache__
-__pycache__/*
-*/__pycache__
-*/__pycache__/*
-*.egg-info
-*.so
-*.egg
-*.egg-info/
-dist/
-build/
+# Python compiled files
 __pycache__/
-*/__pycache__/
-*/*/__pycache__/
 *.py[cod]
 *$py.class
-.pytest_cache/
-.coverage
+*.so
+.Python
+
+# Distribution / packaging
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Unit test / coverage reports
 htmlcov/
 .tox/
 .nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
 .hypothesis/
-.venv
+.pytest_cache/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# Virtual environments
+env/
 venv/
 ENV/
-env/
+env.bak/
+venv.bak/
 .env
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
 .DS_Store
-*.log
+*.sublime-workspace
+*.sublime-project
+
+# Project-specific data files
 orderbook_data/
 data/
 logs/
+*.log
